Fixes broken layout for .input-group-addons within .input-large. Follows...
BS3 commit eee719f608cd0e1fe9db7cd1206b1d4dc2078bd5

--- a/docs/assets/css/todc-bootstrap.css
+++ b/docs/assets/css/todc-bootstrap.css
@@ -327,6 +327,7 @@ input[type="url"].input-large,
 input[type="search"].input-large,
 input[type="tel"].input-large,
 input[type="color"].input-large {
+  min-height: 40px;
   padding: 9px 14px;
   font-size: 14px;
   border-radius: 4px;
